  If the character's weight >= itemsMaxWeight_sellOrStore just after having
  completed storageAuto, then log out because something is wrong.
- getAuto: dcOnEmpty (flag)
  If true, kore will disconnect if the amount of the item in inventory plus
  storage is below minAmount.
- dcOnLevel (level)
  If true, then when you gain a level, kore will log out if you are now
  >= the specified level.

Internal:
- Obsolete getActorHash() function removed (use Actor::get() instead).
- The format of $npcs_lut has changed, IDs are completely abandoned.
- Attack AI routines should now support players as well.
- New Match::cartItem() function, similar to Match::inventoryItem().
- The S and L pack types have been completely removed. Do not use these
  anymore, use v and V respectively.
- 'ai print' command should mangle less characters into '.'.

Credits:
- doenet: chatLangCode bugfixes.


==================
### 1.6.2
==================

*** INCOMPATIBLE CHANGES ***:
- Items named e.g. "Unknown 1234" are now called "Unknown #1234" so that
  you can use their name in items_control.txt.
- The syntax for chat room commands has been changed. See below.
- Many "whenStatus(In)active" names have been changed, so that they're
  consistent with the actual item or skill names.
  For example, the status name for Concentration Potion has been renamed
  from "Concent" to "Concentration Potion", and the status name
  for Increase AGI has been renamed from "Inc Agi" to "Increase AGI".
- dcOnDisconnect must be set to 2 if you want to disconnect when
  you get "Out of sync with server" error.

Bug fixes:
- Fix deal bug: showing twice as many items added.
- Make "Compiles portals now?" prompt case-insensitive.
- Prevent the character select screen from appearing randomly due to
  lag or unparsed packets.
- Storage log not created when relogAfterStorage is active.
- Bot should no longer fail to pick up items dropped by monsters that
  died a distance away.
- Tk map viewer has been fixed.